--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "lint": "eslint . --ext .js"
   },
   "dependencies": {
+    "@react-native-community/eslint-config": "^3.0.1",
+    "eslint": "^7.32.0",
     "expo": "~43.0.2",
     "expo-status-bar": "~1.1.0",
+    "prettier": "^2.5.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-web": "0.17.1"
-  },
-  "devDependencies": {
-
   },
   "private": true
 }
