--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "eslint": "^7.32.0",
     "expo": "~43.0.2",
     "expo-status-bar": "~1.1.0",
+    "metro": "^0.66.2",
     "prettier": "^2.5.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react-native": "^0.64.3",
+    "react-native-paper": "^4.11.1",
     "react-native-web": "0.17.1"
   },
   "private": true
