--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "17.0.1",
     "react-native": "^0.64.3",
     "react-native-paper": "^4.11.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "styled-components-native": "^1.0.2"
   },
   "private": true
 }
