--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "^0.64.3",
     "react-native-paper": "^4.11.1",
     "react-native-web": "0.17.1",
+    "styled-components": "^5.3.3",
     "styled-components-native": "^1.0.2"
   },
   "private": true
