--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo-google-fonts/lato": "^0.2.0",
     "@expo-google-fonts/oswald": "^0.2.0",
     "@react-native-community/eslint-config": "^3.0.1",
+    "@react-navigation/native": "^6.0.6",
     "eslint": "^7.32.0",
     "expo": "~43.0.2",
     "expo-font": "^10.0.3",
