--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
+    "camelize": "^1.0.0",
     "eslint": "^7.32.0",
     "expo": "~43.0.2",
     "expo-font": "^10.0.3",
