--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "17.0.1",
     "react-native": "^0.64.3",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-maps": "^0.29.4",
     "react-native-paper": "^4.11.1",
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
