--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo": "~43.0.2",
     "expo-font": "^10.0.3",
     "expo-status-bar": "~1.1.0",
+    "firebase": "^9.6.1",
     "metro": "^0.66.2",
     "prettier": "^2.5.1",
     "react": "17.0.1",
