--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-native-async-storage/async-storage": "^1.15.14",
     "@react-native-community/eslint-config": "^3.0.1",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^14.1.0",
+    "@react-native-firebase/auth": "^14.1.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
