Added expo camera package

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "camelize": "^1.0.0",
     "eslint": "^7.32.0",
     "expo": "~43.0.2",
+    "expo-camera": "^12.1.0",
     "expo-font": "^10.0.3",
     "expo-status-bar": "~1.1.0",
     "firebase": "^9.6.1",
